--- a/forthemoon.html
+++ b/forthemoon.html
@@ -10,7 +10,7 @@
 
         <meta property="og:title" content="FOR THE MOON" />
         <meta property="og:description" content="포더문 쥬얼리 / 포더문 펫" />
-        <meta property="og:image" content="https://github.com/forthemooon/organize.moonlife/blob/main/orgazize_moonlife.jpg?raw=true" />
+        <meta property="og:image" content="https://forthemooon.github.io/forthemoon/" />
         
         <title>FOR THE MOON</title>
         <style>
