--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
         <div class="profile"></div>
         <h1 class="main">FOR THE MOON</h1>
         <p class="sub">JEWERLY / PET SUPPLIES</p>
-        <a class="bigbutton"target="_blank" href="https://www.forthemoon.co.kr/">포더문 JEWERLY</a>
-        <a class="bigbutton"target="_blank" href="https://smartstore.naver.com/forthemoon">포더문 PET</a>
-        
+        <a class="bigbutton"target="_blank" href="https://www.forthemoon.co.kr/">포더문 쥬얼리 스토어</a>
+        <a class="bigbutton"target="_blank" href="https://smartstore.naver.com/forthemoon">포더문 펫 스토어</a>
+        <BR>
+        <div style="color:#FFFFFF;width: 320px;font-size: 14px;margin-bottom: 8px;">인스타그램</div>
         <div class="buttons">
             <a class="minibutton" target="_blank" href="https://www.instagram.com/_forthemoon">포더문 쥬얼리</a>
             <a class="minibutton"target="_blank" href="https://www.instagram.com/forthemoon_pet">포더문 펫</a>
